crates/toml/tests/snapshots/invalid/array/only-comma-1.stderr
TOML parse error at line 1, column 17
  |
1 | only-comma-1 = [,]
  |                 ^
extra comma in array, expected value
